--- a/systematics/configurations/pi0ana.toml
+++ b/systematics/configurations/pi0ana.toml
@@ -1,22 +1,22 @@
 [input]
 path = 'icarus_bnb_ccpi0_mc_onbeam_offbeam_vars.root'
-caflist = 'input_files.txt'
+caflist = 'input_files_extendedcv.txt'
 
 [output]
-path = 'icarus_bnb_ccpi0_mc_onbeam_offbeam_vars_syst_delete.root'
+path = 'icarus_bnb_ccpi0_mc_onbeam_offbeam_vars_syst.root'
 histogram_destination = 'variations/'
 
 [[sysvar]]
 name = 'reco_muon_beam_costheta'
-bins = [20, -1, 1]
+bins = [12, -1, 1]
 
 [variations]
-keys = ['mc', 'var00', 'var01', 'var02', 'var03m', 'var03p', 'var05', 'var06', 'var07', 'var09m', 'var09p', 'var10m', 'var10p']
+keys = ['cv', 'var00', 'var01', 'var02', 'var03m', 'var03p', 'var05', 'var06', 'var07', 'var09m', 'var09p', 'var10m', 'var10p']
 origin = 'events/'
 tree = 'SelectedNu_PhaseCuts'
 result_destination = 'detsys_results/'
 variable = 'reco_muon_beam_costheta'
-bins = [20, -1, 1]
+bins = [12, -1, 1]
 nuniverses = 10000
 
 [[tree]]
@@ -24,7 +24,6 @@ origin = 'events/mc/SelectedNu_PhaseCuts'
 destination = 'events/mc/'
 name = 'SelectedNu_PhaseCuts'
 action = 'add_weights'
-#table_types = ['multisim', 'multisigma']
 table_types = ['multisim', 'multisigma', 'variation']
 
 [[tree]]
@@ -32,8 +31,6 @@ origin = 'events/mc/SelectedCos_PhaseCuts'
 destination = 'events/mc/'
 name = 'SelectedCos_PhaseCuts'
 action = 'copy'
-#table_types = ['multisim', 'multisigma']
-#table_types = ['multisim', 'multisigma', 'variation']
 
 [[tree]]
 origin = 'events/mc/Signal_PhaseCuts'
@@ -61,8 +58,8 @@ type = 'variation'
 index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
 scale = [-3, -2, -1, 1, 1, 2, 3]
-ordinate = 'mc'
-points = ['var00', 'var00', 'var00', 'mc', 'var00', 'var00', 'var00']
+ordinate = 'cv'
+points = ['var00', 'var00', 'var00', 'cv', 'var00', 'var00', 'var00']
 
 [[sys]]
 name = 'var01'
@@ -71,8 +68,8 @@ type = 'variation'
 index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
 scale = [-3, -2, -1, 1, 1, 2, 3]
-ordinate = 'mc'
-points = ['var01', 'var01', 'var01', 'mc', 'var01', 'var01', 'var01']
+ordinate = 'cv'
+points = ['var01', 'var01', 'var01', 'cv', 'var01', 'var01', 'var01']
 
 [[sys]]
 name = 'var02'
@@ -81,8 +78,8 @@ type = 'variation'
 index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
 scale = [-3, -2, -1, 1, 1, 2, 3]
-ordinate = 'mc'
-points = ['var02', 'var02', 'var02', 'mc', 'var02', 'var02', 'var02']
+ordinate = 'cv'
+points = ['var02', 'var02', 'var02', 'cv', 'var02', 'var02', 'var02']
 
 [[sys]]
 name = 'var03'
@@ -91,8 +88,8 @@ type = 'variation'
 index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
 scale = [3, 2, 1, 1, 1, 2, 3]
-ordinate = 'mc'
-points = ['var03m', 'var03m', 'var03m', 'mc', 'var03p', 'var03p', 'var03p']
+ordinate = 'cv'
+points = ['var03m', 'var03m', 'var03m', 'cv', 'var03p', 'var03p', 'var03p']
 
 #[[sys]]
 #name = 'var04'
@@ -100,8 +97,8 @@ points = ['var03m', 'var03m', 'var03m', 'mc', 'var03p', 'var03p', 'var03p']
 #index = -1
 #nsigma = [-3, -2, -1, 0, 1, 2, 3]
 #scale = [-3, -2, -1, 1, 1, 2, 3]
-#ordinate = 'mc'
-#points = ['var04', 'var04', 'var04', 'mc', 'var04', 'var04', 'var04']
+#ordinate = 'cv'
+#points = ['var04', 'var04', 'var04', 'cv', 'var04', 'var04', 'var04']
 
 [[sys]]
 name = 'var05'
@@ -120,8 +117,8 @@ type = 'variation'
 index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
 scale = [-3, -2, -1, 1, 1, 2, 3]
-ordinate = 'mc'
-points = ['var06', 'var06', 'var06', 'mc', 'var06', 'var06', 'var06']
+ordinate = 'cv'
+points = ['var06', 'var06', 'var06', 'cv', 'var06', 'var06', 'var06']
 
 [[sys]]
 name = 'var07'
@@ -139,8 +136,8 @@ points = ['var07', 'var07', 'var07', 'var00', 'var07', 'var07', 'var07']
 #index = -1
 #nsigma = [-3, -2, -1, 0, 1, 2, 3]
 #scale = [-3, -2, -1, 1, 1, 2, 3]
-#ordinate = 'mc'
-#points = ['var08', 'var08', 'var08', 'mc', 'var08', 'var08', 'var08']
+#ordinate = 'cv'
+#points = ['var08', 'var08', 'var08', 'cv', 'var08', 'var08', 'var08']
 
 [[sys]]
 name = 'var09'
@@ -149,8 +146,8 @@ type = 'variation'
 index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
 scale = [-3, -2, -1, 1, 1, 2, 3]
-ordinate = 'mc'
-points = ['var09m', 'var09m', 'var09m', 'mc', 'var09p', 'var09p', 'var09p']
+ordinate = 'cv'
+points = ['var09m', 'var09m', 'var09m', 'cv', 'var09p', 'var09p', 'var09p']
 
 [[sys]]
 name = 'var10'
@@ -159,8 +156,8 @@ type = 'variation'
 index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
 scale = [3, 2, 1, 1, 1, 2, 3]
-ordinate = 'mc'
-points = ['var10m', 'var10m', 'var10m', 'mc', 'var10p', 'var10p', 'var10p']
+ordinate = 'cv'
+points = ['var10m', 'var10m', 'var10m', 'cv', 'var10p', 'var10p', 'var10p']
 
 [[sys]]
 name = 'GENIEReWeight_SBN_v1_multisigma_ZExpA1CCQE'
