--- a/spineplot/configurations/pi0ana/selected/ccpi0ana_category_syst.toml
+++ b/spineplot/configurations/pi0ana/selected/ccpi0ana_category_syst.toml
@@ -2,7 +2,7 @@
 name = 'basic'
 style_sheet = "/exp/icarus/app/users/lkashur/SPINEAna/spine_anaplot_tools/spineplot/quick/pi0ana.mplstyle"
 markers = ['o', '^', 's', 'P', 'D']
-default_figsize = [10,7]
+default_figsize = [8,8]
 title = ''
 mark_pot = true
 mark_pot_horizontal = true
@@ -17,14 +17,23 @@ pattern = 'var(01|02|03|04|05|06|07|08|09|10)+'
 [[systematic_recipe]]
 name = 'flux'
 label = 'Flux Systematics'
-pattern = '_Flux'
-#pattern = '\\b\\w*_Flux\\b'
+pattern = 'Flux'
 
 [[systematic_recipe]]
-name = 'xsec'
+name = 'multisim_xsec'
+label = 'Interaction Systematics: Multisim'
+pattern = 'GENIEReWeight_SBN_v1_multisim_(ZExpAVariation|CCRES|NCRES|NCELVariation|DISBY|FSI)+'
+
+[[systematic_recipe]]
+name = 'multisigma_xsec'
+label = 'Interaction Systematics: Multisigma'
+pattern = 'GENIEReWeight_SBN_v1_multisigma_(VecFFCCQEshape|RPA_CCQE|CoulombCCQE|NormCCMEC|NormNCMEC|RDec|Theta|NormCCCOH|NormNCCOH|NonRES)+'
+
+[[systematic_recipe]]
+name = 'interaction'
 label = 'Interaction Systematics'
-#pattern = '\\bGENIEReWeight_SBN_v1_multisim_\\w+\\b'
-pattern = 'GENIEReWeight_SBN_v1_multisim'
+#pattern = 'GENIEReWeight_SBN_v1_multisim'
+pattern = '(multisim|multisigma)_xsec'
 
 [[systematic_recipe]]
 name = 'stats'
@@ -40,7 +49,7 @@ pattern = 'offbeam_statistical'
 #name = 'flux_xsec'
 #label = 'Flux + Interaction Uncertainty'
 #pattern = '(flux|xsec|stats)'
-                
+
 [[systematic_recipe]]
 name = 'all'
 label = 'Total MC Uncertainty'
@@ -48,14 +57,17 @@ label = 'Total MC Uncertainty'
 #pattern = '(flux)'
 #pattern = '(xsec)'
 #pattern = '(stats)'
-pattern = '(detsys|flux|xsec|stats)'
+pattern = '(detsys|flux|interaction|stats)'
 
 [samples.mc_nu]
 key = 'mc'
 exposure_type = "pot"
 trees = ['SelectedNu_PhaseCuts',]
-systematics = ['variationTree', 'multisimTree']
-presel = 'matches_energy == 1'
+#systematics = ['variationTree', 'multisimTree']
+#systematics = ['variationTree', 'multisigmaTree']
+systematics = ['variationTree', 'multisimTree', 'multisigmaTree']
+#presel = 'matches_energy == 1'
+presel = 'matches_baseline == 1'
 
 [samples.mc_cos]
 key = 'mc'
@@ -85,75 +97,87 @@ category_labels = ['1$\mu$0$\pi^{±}$1$\pi^{0}$', '1$\mu$0$\pi^{±}$1$\pi^{0}$ (
 category_colors = ['#1b9e77', '#b3e2cd', '#dea0fd', '#4c78a8', '#e5c494', '#e45756', '#17becf', '#f58518', '#a6761d', 'black']
 category_types = ['histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'scatter']
 
-[variables.true_muon_momentum_mag]
-key = 'true_muon_momentum_mag'
-range = [0, 3000]
-nbins = 20
-binning_scheme = 'equal_width'
-xlabel = 'True Muon Momentum [MeV/c]'
+#[variables.true_muon_momentum_mag]
+#key = 'true_muon_momentum_mag'
+#range = [0, 3000]
+#nbins = 20
+#binning_scheme = 'equal_width'
+#xlabel = 'True Muon Momentum [MeV/c]'
 
 [variables.reco_muon_momentum_mag]
 key = 'reco_muon_momentum_mag'
-range = [0, 3000]
-nbins = 20
-binning_scheme = 'equal_width'
+#range = [0, 3000]
+#nbins = 20
+#binning_scheme = 'equal_width'
+binning_scheme = 'custom'
+nbins = 10
+#range = [0.0, 150.0, 300.0, 450.0, 600.0, 750.0, 900.0, 1050.0, 1200.0, 1350.0, 1500.0, 2000.0, 3000.0]
+range = [0.0, 250.0, 500.0, 750.0, 1000.0, 1250.0, 1500.0, 1750.0, 2000.0, 2250.0, 2500.0]
 xlabel = 'Reconstructed Muon Momentum [MeV/c]'
 
 [variables.reco_muon_beam_costheta]
 key = 'reco_muon_beam_costheta'
-range = [-1, 1]
-nbins = 20
-binning_scheme = 'equal_width'
+#range = [-1, 1]
+#nbins = 8
+#binning_scheme = 'equal_width'
+binning_scheme = 'custom'
+nbins = 8
+#range = [-1.0, -0.75, -0.5, -0.25, 0.0, 0.25, 0.50, 0.75, 1.0]
+range = [-1.0, -0.5, 0.0, 0.333, 0.5, 0.625, 0.75, 0.875, 1.0]
+#range = [-1.0, -0.5, -0.125, 0.25, 0.50, 0.65, 0.75, 0.90, 1.0]
 xlabel = 'Reconstructed $\cos(\theta_{\mu})$'
 
 [variables.reco_pi0_momentum_mag]
 key = 'reco_pi0_momentum_mag'
-range = [0, 1500]
-nbins = 15
-binning_scheme = 'equal_width'
+#range = [0, 1500]
+#nbins = 15
+#binning_scheme = 'equal_width'
+binning_scheme = 'custom'
+nbins = 8
+range = [0, 100, 200, 300, 400, 500, 650, 800, 1200]
 xlabel = 'Reconstructed $\pi^{0}$ Momentum [MeV/c]'
 
-[variables.reco_pi0_leading_photon_energy]
-key = 'reco_pi0_leading_photon_energy'
-range = [0, 1000]
-nbins = 20
-binning_scheme = 'equal_width'
-xlabel = 'Reconstructed $\pi^{0}$ Leading Photon Energy [MeV]'
+#[variables.reco_pi0_leading_photon_energy]
+#key = 'reco_pi0_leading_photon_energy'
+#range = [0, 1000]
+#nbins = 20
+#binning_scheme = 'equal_width'
+#xlabel = 'Reconstructed $\pi^{0}$ Leading Photon Energy [MeV]'
 
-[variables.reco_pi0_leading_photon_conv_dist]
-key = 'reco_pi0_leading_photon_conv_dist'
-range = [0, 100]
-nbins = 20
-binning_scheme = 'equal_width'
-xlabel = 'Reconstructed $\pi^{0}$ Leading Photon Conversion Distance [cm]'
+#[variables.reco_pi0_leading_photon_conv_dist]
+#key = 'reco_pi0_leading_photon_conv_dist'
+#range = [0, 100]
+#nbins = 20
+#binning_scheme = 'equal_width'
+#xlabel = 'Reconstructed $\pi^{0}$ Leading Photon Conversion Distance [cm]'
 
-[variables.reco_pi0_leading_photon_cosphi]
-key = 'reco_pi0_leading_photon_cosphi'
-range = [-1, 1]
-nbins = 100
-binning_scheme = 'equal_width'
-xlabel = 'Reconstructed $\pi^{0}$ Leading Photon cos($\phi$) [cm]'
+#[variables.reco_pi0_leading_photon_cosphi]
+#key = 'reco_pi0_leading_photon_cosphi'
+#range = [-1, 1]
+#nbins = 100
+#binning_scheme = 'equal_width'
+#xlabel = 'Reconstructed $\pi^{0}$ Leading Photon cos($\phi$) [cm]'
 
-[variables.reco_pi0_leading_photon_ip]
-key = 'reco_pi0_leading_photon_ip'
-range = [0, 20]
-nbins = 50
-binning_scheme = 'equal_width'
-xlabel = 'Reconstructed $\pi^{0}$ Leading Photon IP [cm]'
+#[variables.reco_pi0_leading_photon_ip]
+#key = 'reco_pi0_leading_photon_ip'
+#range = [0, 20]
+#nbins = 50
+#binning_scheme = 'equal_width'
+#xlabel = 'Reconstructed $\pi^{0}$ Leading Photon IP [cm]'
 
-[variables.reco_pi0_subleading_photon_energy]
-key = 'reco_pi0_subleading_photon_energy'
-range = [0, 1000]
-nbins = 20
-binning_scheme = 'equal_width'
-xlabel = 'Reconstructed $\pi^{0}$ Subleading Photon Energy [MeV]'
+#[variables.reco_pi0_subleading_photon_energy]
+#key = 'reco_pi0_subleading_photon_energy'
+#range = [0, 1000]
+#nbins = 20
+#binning_scheme = 'equal_width'
+#xlabel = 'Reconstructed $\pi^{0}$ Subleading Photon Energy [MeV]'
 
-[variables.reco_pi0_subleading_photon_conv_dist]
-key = 'reco_pi0_subleading_photon_conv_dist'
-range = [0, 100]
-nbins = 20
-binning_scheme = 'equal_width'
-xlabel = 'Reconstructed $\pi^{0}$ Subleading Photon Conversion Distance [cm]'
+#[variables.reco_pi0_subleading_photon_conv_dist]
+#key = 'reco_pi0_subleading_photon_conv_dist'
+#range = [0, 100]
+#nbins = 20
+#binning_scheme = 'equal_width'
+#xlabel = 'Reconstructed $\pi^{0}$ Subleading Photon Conversion Distance [cm]'
 
 #[variables.reco_pi0_subleading_photon_cosphi]
 #key = 'reco_pi0_subleading_photon_cosphi'
@@ -164,9 +188,12 @@ xlabel = 'Reconstructed $\pi^{0}$ Subleading Photon Conversion Distance [cm]'
 
 [variables.reco_pi0_beam_costheta]
 key = 'reco_pi0_beam_costheta'
-range = [-1, 1]
-nbins = 20
-binning_scheme = 'equal_width'
+#range = [-1, 1]
+#nbins = 20
+#binning_scheme = 'equal_width'
+binning_scheme = 'custom'
+nbins = 8
+range = [-1.0, -0.75, -0.5, -0.25, 0.0, 0.25, 0.50, 0.75, 1.0]
 xlabel = 'Reconstructed $\cos(\theta_{\pi^{0}})$'
 
 [variables.reco_pi0_mass]
@@ -176,12 +203,12 @@ nbins = 40
 binning_scheme = 'equal_width'
 xlabel = 'Reconstructed Neutral Pion Mass [MeV/c$^{2}$]'
 
-[variables.reco_visible_energy]
-key = 'reco_visible_energy'
-range = [0, 4]
-nbins = 25
-binning_scheme = 'equal_width'
-xlabel = 'Reconstructed Visible Energy [GeV]'
+#[variables.reco_visible_energy]
+#key = 'reco_visible_energy'
+#range = [0, 4]
+#nbins = 25
+#binning_scheme = 'equal_width'
+#xlabel = 'Reconstructed Visible Energy [GeV]'
 
 [[figure]]
 name = 'reco_muon_momentum_mag'
@@ -215,67 +242,66 @@ variable = 'reco_pi0_momentum_mag'
 #yrange=[0,180]
 draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
 
-[[figure]]
-name = 'reco_pi0_leading_photon_energy'
-type = 'SimpleFigure'
-style = 'basic'
-title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
-[[figure.artists]]
-type = 'SpineSpectra1D'
-variable = 'reco_pi0_leading_photon_energy'
-draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
+#[[figure]]
+#name = 'reco_pi0_leading_photon_energy'
+#type = 'SimpleFigure'
+#style = 'basic'
+#title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+#[[figure.artists]]
+#type = 'SpineSpectra1D'
+#variable = 'reco_pi0_leading_photon_energy'
+#draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
 
-[[figure]]
-name = 'reco_pi0_leading_photon_conv_dist'
-type = 'SimpleFigure'
-style = 'basic'
-title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
-[[figure.artists]]
-type = 'SpineSpectra1D'
-variable = 'reco_pi0_leading_photon_conv_dist'
-yrange = []
-draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
+#[[figure]]
+#name = 'reco_pi0_leading_photon_conv_dist'
+#type = 'SimpleFigure'
+#style = 'basic'
+#title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+#[[figure.artists]]
+#type = 'SpineSpectra1D'
+#variable = 'reco_pi0_leading_photon_conv_dist'
+#yrange = []
+#draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
 
-[[figure]]
-name = 'reco_pi0_leading_photon_cosphi'
-type = 'SimpleFigure'
-style = 'basic'
-title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
-[[figure.artists]]
-type = 'SpineSpectra1D'
-variable = 'reco_pi0_leading_photon_cosphi'
-draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
+#[[figure]]
+#name = 'reco_pi0_leading_photon_cosphi'
+#type = 'SimpleFigure'
+#style = 'basic'
+#title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+#[[figure.artists]]
+#type = 'SpineSpectra1D'
+#variable = 'reco_pi0_leading_photon_cosphi'
+#draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
 
-[[figure]]
-name = 'reco_pi0_leading_photon_ip'
-type = 'SimpleFigure'
-style = 'basic'
-title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
-[[figure.artists]]
-type = 'SpineSpectra1D'
-variable = 'reco_pi0_leading_photon_ip'
-draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
+#[[figure]]
+#name = 'reco_pi0_leading_photon_ip'
+#type = 'SimpleFigure'
+#style = 'basic'
+#title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+#[[figure.artists]]
+#type = 'SpineSpectra1D'
+#variable = 'reco_pi0_leading_photon_ip'
+#draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
 
+#[[figure]]
+#name = 'reco_pi0_subleading_photon_energy'
+#type = 'SimpleFigure'
+#style = 'basic'
+#title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+#[[figure.artists]]
+#type = 'SpineSpectra1D'
+#variable = 'reco_pi0_subleading_photon_energy'
+#draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
 
-[[figure]]
-name = 'reco_pi0_subleading_photon_energy'
-type = 'SimpleFigure'
-style = 'basic'
-title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
-[[figure.artists]]
-type = 'SpineSpectra1D'
-variable = 'reco_pi0_subleading_photon_energy'
-draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
-
-[[figure]]
-name = 'reco_pi0_subleading_photon_conv_dist'
-type = 'SimpleFigure'
-style = 'basic'
-title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
-[[figure.artists]]
-type = 'SpineSpectra1D'
-variable = 'reco_pi0_subleading_photon_conv_dist'
-draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
+#[[figure]]
+#name = 'reco_pi0_subleading_photon_conv_dist'
+#type = 'SimpleFigure'
+#style = 'basic'
+#title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+#[[figure.artists]]
+#type = 'SpineSpectra1D'
+#variable = 'reco_pi0_subleading_photon_conv_dist'
+#draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
 
 #[[figure]]
 #name = 'reco_pi0_subleading_photon_cosphi'
@@ -308,12 +334,12 @@ variable = 'reco_pi0_mass'
 #yrange = [0, 120]
 draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'stats_offbeam'}
 
-[[figure]]
-name = 'reco_visible_energy'
-type = 'SimpleFigure'
-style = 'basic'
-title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
-[[figure.artists]]
-type = 'SpineSpectra1D'
-variable = 'reco_visible_energy'
-draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
+#[[figure]]
+#name = 'reco_visible_energy'
+#type = 'SimpleFigure'
+#style = 'basic'
+#title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+#[[figure.artists]]
+#type = 'SpineSpectra1D'
+#variable = 'reco_visible_energy'
+#draw_kwargs = {'show_component_number' = true, 'show_component_percentage' = true, 'invert_stack_order' = true, 'draw_error' = 'all'}
