--- a/systematics/CMakeLists.txt
+++ b/systematics/CMakeLists.txt
@@ -41,12 +41,14 @@ target_link_libraries(detsys PRIVATE ${ROOT_LIBRARIES} configuration tomlplusplu
 target_include_directories(detsys PRIVATE include/ ${ROOT_INCLUDE_DIRS} tomlplusplus/include)
 
 # Library for tree-handling code
-add_library(trees SHARED src/trees.cc)
+#add_library(trees SHARED src/trees.cc)
+add_library(trees SHARED src/trees_gundam.cc)
 target_link_libraries(trees PRIVATE ${ROOT_LIBRARIES} configuration weight_reader systematics detsys tomlplusplus::tomlplusplus)
 target_include_directories(trees PRIVATE include/ ${ROOT_INCLUDE_DIRS} tomlplusplus/include)
 
 # Add the executable target
-add_executable(run_systematics src/main.cc ${SYSINC})
+#add_executable(run_systematics src/main.cc ${SYSINC})
+add_executable(run_systematics src/main_gundam.cc ${SYSINC})
 
 # Link the ROOT libraries to the target
 target_link_libraries(run_systematics ${ROOT_LIBRARIES} ${SBNANAOBJ_LIBRARY_DIRS}/libsbnanaobj_StandardRecord.so tomlplusplus::tomlplusplus configuration detsys trees)
